[package]
name = "myrtle"
version = "0.1.0"
authors = ["Kevin de Berk <kevin@dberk.nl>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
rustyline = "8.0.0"
rustyline-derive = "0.4.0"
lazy_static = "1.4.0"

[build-dependencies]
glob = "0.3"
proc-macro2 = "1.0"
quote = "1.0"
regex = "1"
serde = "1.0"
serde_derive = "1.0"
serde_yaml = "0.8"
syn = "1.0"
